--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
   "homepage": "https://github.com/ruk-na-Ziddi/jison_assignment#readme",
   "devDependencies": {
     "jison": "^0.4.17"
+  },
+  "dependencies": {
+    "lodash": "^4.13.1"
   }
 }
